Added  card view and PrimeNG lib for styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-credit-card></app-credit-card>
-<app-credit-card-form></app-credit-card-form>
+<!-- <app-credit-card-form></app-credit-card-form> -->
