--- a/src/app/components/credit-card/credit-card.component.html
+++ b/src/app/components/credit-card/credit-card.component.html
@@ -1,1 +1,26 @@
-<p>credit-card works!</p>
+<div style="width: 50%; height: 100%;display: flex; align-items: center; justify-content: center;">
+  <div class="card">
+    <div class="card-header">
+      <div class="card-header__name">Credit Card</div>
+      <img class="card-header__logo" src="../../../assets/visa.png" alt="">
+    </div>
+
+    <img style="transform: rotate(90deg);
+    width: 65px;"
+      src="../../../assets/kisspng-integrated-circuits-chips-smart-card-computer-ic-chip-5abc26ec39a441.9442861815222801722361.png"
+      alt="chip">
+    <div class="card-number">
+      <span *ngFor="let mask of cardMask">{{mask}}</span>
+    </div>
+    <div class="card-footer">
+      <div>
+        <div class="card-holder">Card Holder</div>
+        <div class="card-holder__name">Full name</div>
+      </div>
+      <div>
+        <div class="card-expire">Expires</div>
+        <div class="card-expire__date">MM/YY</div>
+      </div>
+    </div>
+  </div>
+</div>
