--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Roboto&display=swap');
+@import url('../node_modules/primeicons/primeicons.css');
+@import url('../node_modules/primeng/resources/themes/mdc-light-deeppurple/theme.css');
+@import url('../node_modules/primeng/resources/primeng.min.css');
+@import url('../node_modules/primeflex/primeflex.css');
+
+// primeng/resources/themes/mdc-light-deeppurple/theme.css
+//primeng/resources/themes/md-light-deeppurple/theme.css
+
 
 body {
   height: 100vh;
